--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -14,23 +14,21 @@ ENV PATH="/root/.local/bin:$PATH"
 # Create a non-root user and group
 RUN groupadd -r appuser && useradd -r -g appuser -m appuser
 
-# Create app and data directories and set initial ownership
+# Create app and data directories
 WORKDIR /app
 RUN mkdir /data && chown appuser:appuser /data
-RUN chown appuser:appuser /app
 
-# Switch to the non-root user for subsequent operations
-USER appuser
-
-# Copy project files and install dependencies (as appuser)
+# Copy project files and install dependencies as root
 COPY pyproject.toml ./
-
-# Compile requirements and install them system-wide
 RUN uv pip compile pyproject.toml -o requirements.txt
 RUN uv pip install --system -r requirements.txt
 
-# Copy the rest of the application code (as appuser)
+# Copy application code and set ownership
 COPY worker.py .
+RUN chown appuser:appuser worker.py pyproject.toml requirements.txt
+
+# Switch to the non-root user
+USER appuser
 
 # Expose the port the app runs on
 EXPOSE 8000
