--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_KEY="your-super-secret-and-long-api-key"
-GOOGLE_API_KEY="your-google-ai-api-key"
+API_KEY="Le-Trufot3"
+GOOGLE_API_KEY="AIzaSyAhJjDlul_0IkyBAtfuvdU6ScZu1Kb-92M"
