--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# version: '3.8'
 
 services:
   redis:
@@ -57,6 +57,7 @@ services:
       - REDIS_URL=redis://redis:6379
       - DB_PATH=/data/gastos.db
       - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - GEMINI_MODEL=${GEMINI_MODEL}
     depends_on:
       redis:
         condition: service_healthy
