fixing... redis stream receive

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+REDIS_URL=redis://redis:6379
+DB_PATH=/data/gastos.db
 API_KEY="Le-Trufot3"
 GOOGLE_API_KEY="AIzaSyAhJjDlul_0IkyBAtfuvdU6ScZu1Kb-92M"
+GEMINI_MODEL="gemini-2.5-flash-lite"
