--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,22 +15,19 @@ services:
       timeout: 5s
       retries: 5
 
-  node:
+  ingestor:
     build:
-      context: .
+      context: ./ingestor
       dockerfile: Dockerfile.node
     container_name: turbogastos-node-ingestor
     restart: unless-stopped
     shm_size: 512m
     volumes:
-      - ./sessions:/app/sessions
+      - ./ingestor/sessions:/app/sessions
     ports:
       - "3000:3000"
-    environment:
-      - TZ=America/Santiago
-      - API_KEY=${API_KEY}
-      - REDIS_URL=redis://redis:6379
-      - PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+    env_file:
+      - ./ingestor/.env
     depends_on:
       redis:
         condition: service_healthy
@@ -43,7 +40,7 @@ services:
 
   worker:
     build:
-      context: .
+      context: ./worker
       dockerfile: Dockerfile.python
     container_name: turbogastos-python-worker
     restart: unless-stopped
@@ -51,13 +48,8 @@ services:
       - ./data:/data
     ports:
       - "8000:8000"
-    environment:
-      - TZ=America/Santiago
-      - API_KEY=${API_KEY}
-      - REDIS_URL=redis://redis:6379
-      - DB_PATH=/data/gastos.db
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - GEMINI_MODEL=${GEMINI_MODEL}
+    env_file:
+      - ./worker/.env
     depends_on:
       redis:
         condition: service_healthy
