added mcp-sqlite server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,18 @@ services:
     depends_on:
       - worker
 
+  mcp-sqlite:
+    build:
+      context: ./mcp_service
+    container_name: turbogastos-mcp-sqlite
+    restart: unless-stopped
+    volumes:
+      - ./data:/data
+    ports:
+      - "8080:8080"
+    environment:
+      - DB_PATH=/data/gastos.db
+
 volumes:
   redis-data:
     driver: local
