--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "uvicorn[standard]",
     "redis>=5.0.0",
     "pydantic>=2.0.0",
-    "google-generativeai"
+    "google-generativeai",
+    "mcp-sqlite"
 ]
 
 [build-system]
