--- a/mcp_service/Dockerfile
+++ b/mcp_service/Dockerfile
@@ -1,21 +1,21 @@
 # Use the official Python image.
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 # Set the working directory in the container.
 WORKDIR /app
 
 # Install uv
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.local/bin:$PATH"
+RUN pip install uv
 
 # Copy the project files.
 COPY pyproject.toml .
 
 # Install dependencies.
-RUN uv pip install --system -r <(uv pip compile pyproject.toml)
+RUN uv pip compile pyproject.toml -o requirements.txt
+RUN uv pip install --system -r requirements.txt
 
 # Copy the rest of the application code.
-COPY run.py .
+COPY . .
 
 # Set the command to run the application.
 CMD ["python", "run.py"]
