--- a/worker/Dockerfile.python
+++ b/worker/Dockerfile.python
@@ -5,11 +5,7 @@ FROM python:3.11-slim
 ENV PYTHONUNBUFFERED=1
 
 # Install curl to download the uv installer
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
-
-# Install uv
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.local/bin:$PATH"
+RUN pip install uv
 
 # Create a non-root user and group
 RUN groupadd -r appuser && useradd -r -g appuser -m appuser
@@ -20,6 +16,7 @@ RUN mkdir /data && chown appuser:appuser /data
 
 # Copy project files and install dependencies as root
 COPY pyproject.toml ./
+RUN ls -l
 RUN uv pip compile pyproject.toml -o requirements.txt
 RUN uv pip install --system -r requirements.txt
 
