--- a/worker/pyproject.toml
+++ b/worker/pyproject.toml
@@ -9,8 +9,7 @@ dependencies = [
     "uvicorn[standard]",
     "redis>=5.0.0",
     "pydantic>=2.0.0",
-    "google-generativeai",
-    "mcp-sqlite"
+    "google-generativeai"
 ]
 
 [build-system]
