--- a/mcp_service/Dockerfile
+++ b/mcp_service/Dockerfile
@@ -4,18 +4,14 @@ FROM python:3.12-slim
 # Set the working directory in the container.
 WORKDIR /app
 
-# Install uv
-RUN pip install uv
+# Install mcp-sqlite
+RUN pip install mcp-sqlite
 
-# Copy the project files.
-COPY pyproject.toml .
+# Copy metadata file
+COPY metadata.yml .
 
-# Install dependencies.
-RUN uv pip compile pyproject.toml -o requirements.txt
-RUN uv pip install --system -r requirements.txt
-
-# Copy the rest of the application code.
-COPY . .
+# Expose the port the app runs on
+EXPOSE 8080
 
 # Set the command to run the application.
-CMD ["python", "run.py"]
+CMD ["mcp-sqlite", "--metadata", "metadata.yml", "/data/gastos.db"]
