--- a/gmail_reader/pyproject.toml
+++ b/gmail_reader/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "google-api-python-client",
     "google-auth-httplib2",
-    "google-auth-oauthlib",
+    "google-auth-oauthlib>=0.5.2",
     "redis"
 ]
 
