--- a/ingestor/.env.example
+++ b/ingestor/.env.example
@@ -2,3 +2,4 @@ API_KEY=your-secret-key
 PORT=3000
 REDIS_URL=redis://redis:6379
 PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+WHATSAPP_GROUP_NAME=GastosMyM
