--- a/worker/Dockerfile.python
+++ b/worker/Dockerfile.python
@@ -4,7 +4,10 @@ FROM python:3.11-slim
 # Set environment variables to make Python output unbuffered
 ENV PYTHONUNBUFFERED=1
 
-# Install curl to download the uv installer
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
+# Install uv
 RUN pip install uv
 
 # Create a non-root user and group
